tests/fixtures/invalid/none_bitxor_int.py
# Cannot bitwise XOR None and Int
x: None = None ^ 1
